# dotfiles-hyprland

./: .gitignore  README.md  install.sh
.atl/: .skill-registry.cache.json  skill-registry.md
btop/: btop.conf
gtk-3.0/: gtk.css  settings.ini
gtk-4.0/: colors.css  gtk.css  settings.ini
hypr/: hyprland.lua  monitors.lua  variables.lua
hypr/custom/: general.lua  keybinds.lua  rules.lua  variables.lua
hypr/hyprland/: general.lua  keybinds.lua  variables.lua
hypr/hyprland/lib/: init.lua
hypr/hyprlock/: colors.conf
hypr/wallfliper/: README.md  main.py  pyproject.toml
hypr/wallfliper/core/: __init__.py  integrations.py  portal.py  single_instance.py  state.py  thumbnails.py
hypr/wallfliper/core/backends/: quickshell.py
hypr/wallfliper/ui/: __init__.py  model.py
hypr/wallfliper/ui/qml/: Main.qml
quickshell/ii/: GlobalStates.qml  shell.qml
quickshell/ii/modules/common/: Config.qml
quickshell/ii/scripts/colors/: applycolor.sh
quickshell/ii/services/: CodexBar.qml  ResourceUsage.qml  UsageTracker.qml
quickshell/services/: UsageTracker.qml
systemd/user/: ak620-digital.service  steam-autopicture.service
systemd/user/arch-update-tray.service.d/: path-override.conf
systemd/user/default.target.wants/: ak620-digital.service  steam-autopicture.service
wallfliper/: .gitignore  CLAUDE.md  DESIGN.md  requirements.txt
wallfliper/core/: colors.py  deps.py  firstframe.py  library.py  previews.py  seamless.py
wallfliper/core/backends/: __init__.py  base.py  wlroots.py
wallfliper/ui/: bridge.py
wallfliper/ui/qml/: FolderInput.qml  Settings.qml  Theme.qml
waybar/: config.jsonc  style.css
xsettingsd/: xsettingsd.conf
(+14 files in other folders)
