[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wallfliper"
version = "1.0.0"
description = "Minimalist, Rofi/yazi-style wallpaper selector for Wayland (wlr-layer-shell)."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Roberth Souza", email = "roberth.halk@gmail.com" }]
keywords = ["wallpaper", "wayland", "layer-shell", "hyprland", "swww", "mpvpaper", "niri", "sway"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
]
# PySide6 is declared so a `pip install` produces a runnable app. The *recommended*
# path is still your distro's PySide6 (its Qt must match the system layer-shell-qt
# plugin) — see the README. swww/mpvpaper/ffmpeg are system tools, never pip deps.
dependencies = ["PySide6>=6.7"]

[project.urls]
Homepage = "https://github.com/Roberth-Souza/wallfliper"
Repository = "https://github.com/Roberth-Souza/wallfliper"
Issues = "https://github.com/Roberth-Souza/wallfliper/issues"

# Installs a real `wallfliper` command on PATH (wraps main.main()).
[project.scripts]
wallfliper = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "ui*"]

# Ship the QML views inside the package so an installed `wallfliper` can find them.
[tool.setuptools.package-data]
ui = ["qml/*.qml"]
